# tech-study

./: .gitignore  README.md
algorithms-with-cpp/: CMakeLists.txt
algorithms-with-cpp/0x03/: array_test.cpp  vector_example.cpp
algorithms-with-cpp/basic-algo-lecture/: README.md
algorithms-with-cpp/basic-algo-lecture/0x01/: time_complexity.cpp
algorithms-with-cpp/basic-algo-lecture/0x03/boj/: 10808_1.cpp
algorithms-with-cpp/mastering-data-structures/: README.md
algorithms-with-cpp/mastering-data-structures/0x05-Recursion/: Fibonacci.cpp
algorithms-with-kotlin/: build.gradle.kts  settings.gradle.kts
barkingdog/: CMakeLists.txt
barkingdog/0x03/: array_test.cpp  func2_soluction.cpp
barkingdog/0x03/boj/: 10808_2.cpp
chewing-c/: CMakeLists.txt
chewing-c/CS50/: cs50_3_memory.c
chewing-c/src/chapter-03/: variable-01.c
data-structure-and-algorithm/: build.gradle.kts  settings.gradle.kts
data_structures_explained_simply_in_c/: CMakeLists.txt  main.c
data_structures_explained_simply_in_c/chapter-04/: stack.c
kafka/docker/: README.md
kafka/docker/kafka-cluster/: docker-compose.yml
kafka/gradle/wrapper/: gradle-wrapper.properties
learning-algorithms-with-kotlin/: build.gradle.kts  settings.gradle.kts
learning-algorithms-with-kotlin/gradle/wrapper/: gradle-wrapper.properties
learning-kafka/: .gitignore  build.gradle.kts  settings.gradle.kts
learning-kafka/docker/: README.md
spring-batch/: build.gradle.kts
spring-batch/docker/: docker-compose.yml
trees-and-graphs/: build.gradle.kts  settings.gradle.kts
(+110 files in other folders)
