cmake_minimum_required(VERSION 3.29)
project(algorithms-with-cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(barkingdog main.cpp)

add_executable(0x01_time_complexity 0x01/time_complexity.cpp)
add_executable(array_test 0x03/array_test.cpp)
add_executable(vector_example 0x03/vector_example.cpp)
add_executable(10808_1 0x03/boj/10808_1.cpp)
add_executable(10808_2 0x03/boj/10808_2.cpp)
add_executable(func2_soluction 0x03/func2_soluction.cpp)